feat: add privacy gateway proxy
